Last Project Update

--- a/style.css
+++ b/style.css
@@ -105,8 +105,13 @@ body {
     visibility: hidden;
 }
 
+.hide {
+    display: none;
+}
+
 .container-password:hover .tooltip {
     visibility: visible;
     bottom: 50px;
     opacity: 1;
 }
+
