--- a/style.css
+++ b/style.css
@@ -115,3 +115,13 @@ body {
     opacity: 1;
 }
 
+.container-checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #ffff;
+    font-size: 20px;
+    margin-top: 24px;
+    margin-bottom: 8px;
+}
